# lightpad

./: .gitignore  PKGBUILD  README.md  meson.build  post_install.py  rpm-build.spec
data/: application.css  lightpad.appdata.xml  lightpad.desktop
debian/: changelog  control
src/: AppManager.vala  Application.vala  BackgroundManager.vala  Color.vala  Config.vala  DesktopEntries.vala  EventHandlers.vala  FolderManager.vala  FolderPopupWindow.vala  GridManager.vala  LightPadWindow.vala  Resources.vala  Utilities.vala  config
src/Widgets/: AppItem.vala  CompositedWindow.vala  FolderItem.vala  Indicators.vala  Searchbar.vala
